Lesson 7 - Add Github OAuth, notes collection, validation
